# gauge-itau

./: .gitignore  Dockerfile  README.md  dadosb3_brasilapi.py  dim_socios_cnpj_b3.csv  f_dados_cnpj_b3.csv  pyproject.toml  requirements.txt
