[tool.poetry]
name = "gauge-itau"
version = "0.1.0"
description = ""
authors = ["Danilo Ferreira <gmnmidias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pandas = "^2.2.3"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
